# Kalkulus_Tugas_Akhir

./: CMakeLists.txt  Kalkulus_Kurva_2D.cpp  Kalkulus_Kurva_2D_ReWrite.cpp  Kalkulus_Kurva_3D.cpp  Kalkulus_Kurva_3D_ReWrite.cpp  README.md  asepjahil  bola.cpp
